--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "lodash": "^4.17.21",
@@ -13,6 +14,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "jest": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "identity-obj-proxy": "^3.0.0"
   }
 }
