--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "vite": "^5.2.10",
-    "jest": "^29.7.0",
-    "babel-jest": "^29.7.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.24.0",
+    "@vitejs/plugin-react": "^4.5.2",
+    "vite": "^6.3.5",
+    "jest": "^30.0.0",
+    "babel-jest": "^30.0.0",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
     "identity-obj-proxy": "^3.0.0"
   }
 }
