--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-jest": "^30.0.0",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "typescript": "^5.3.3",
     "identity-obj-proxy": "^3.0.0"
   }
 }
