--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "ESNext",
     "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -10,7 +11,12 @@
     "strict": true,
     "allowJs": false,
     "isolatedModules": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": [
+      "react",
+      "react-dom",
+      "jest"
+    ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
