--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mui/material": "^7.1.1",
     "es-toolkit": "^1.39.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
